force-app/main/default/objects/Checklist_Item__c/fields/Owner_Label__c.field-meta.xml
<CustomField>
    <fullName>Owner_Label__c</fullName>
    <description>The ROLE accountable for this item, mirroring Transaction_Task_Def__mdt.Owner_Label__c and falling back to the group label when the item has none. NOT A USER AND NOT A RECORD OWNER - a master-detail child has no OwnerId. The real person who completed the item is Completed_By__c. Do not render this next to Completed_DateTime__c as completed by role.</description>
    <inlineHelpText>The role accountable for this item, for example CFO or Legal. It is a label, not a Salesforce user.</inlineHelpText>
    <label>Owner Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>