force-app/main/default/objects/Checklist_Item__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The deal phase this item belongs to, stamped at creation from its group. Values are BYTE-IDENTICAL to the first four values of Transaction__c.Stage__c, including the hyphen in Post-Closing. Denormalised from the parent so the checklist UI and reports can filter by phase without a parent join. NO DEFAULT VALUE, deliberately - a plausible default would hide a fan-out that failed to stamp the phase.</description>
    <inlineHelpText>Deal phase this item belongs to. Stamped when the item is created; it does not move when the deal advances.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Contract</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Closing Prep</fullName>
            </value>
            <value>
                <fullName>Post-Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>