force-app/main/default/objects/Checklist_Item__c/fields/Verbal_Verification_Completed__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Verification_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wire-fraud control, migrated 1 to 1 from Task.Verbal_Verification_Completed__c: must be true before a wire verification item can be closed. This is evidence, not a status - it records that a human made the call, and it is the reason a wire item cannot be completed from a list view or a data loader.</description>
    <inlineHelpText>Tick only after you have verbally confirmed the wiring instructions by phone, using a number you looked up yourself.</inlineHelpText>
    <label>Verbal Verification Completed</label>
    <type>Checkbox</type>
</CustomField>