force-app/main/default/objects/Checklist_Item__c/fields/Verified_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Verified_By_Name__c</fullName>
    <description>Name of the person at the title company or lender who confirmed the wiring instructions by phone. Migrated from Task.Verified_By__c and DELIBERATELY RENAMED: a bare _By__c reads as a relationship field under this repo naming convention, and on this object the collision is live rather than theoretical because the real User lookup Completed_By__c sits directly beside it. _Name__c is the convention for Text carrying a human label.</description>
    <inlineHelpText>Name of the person at the title company or lender who confirmed the instructions on the call.</inlineHelpText>
    <label>Verified By (Name)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>